[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-blockchain = { git = "https://github.com/akru/substrate" }
sp-runtime = { git = "https://github.com/akru/substrate" }
sp-core = { git = "https://github.com/akru/substrate" }
sp-consensus = { git = "https://github.com/akru/substrate" }
sp-inherents = { git = "https://github.com/akru/substrate" }
sp-api = { git = "https://github.com/akru/substrate" }
sc-client-api = { git = "https://github.com/akru/substrate" }
sc-service = { git = "https://github.com/akru/substrate" }
sc-cli = { git = "https://github.com/akru/substrate" }

# Polkadot dependencies
polkadot-collator = { git = "https://github.com/akru/polkadot" }
polkadot-service = { git = "https://github.com/akru/polkadot" }
polkadot-parachain = { git = "https://github.com/akru/polkadot" }
polkadot-primitives = { git = "https://github.com/akru/polkadot" }
polkadot-validation = { git = "https://github.com/akru/polkadot" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }

# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

[dev-dependencies]
# Cumulus dependencies
test-runtime = { package = "cumulus-test-runtime", path = "../test/runtime" }
test-client = { package = "cumulus-test-client", path = "../test/client" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/akru/substrate" }
sp-keyring = { git = "https://github.com/akru/substrate" }
sp-blockchain = { git = "https://github.com/akru/substrate" }
sp-state-machine = { git = "https://github.com/akru/substrate" }

# Polkadot dependencies
polkadot-service = { git = "https://github.com/akru/polkadot" }

# Other dependencies
env_logger = "0.7.1"
