[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-blockchain = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-inherents = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-service = "0.8.0-rc5"
sc-cli = "0.8.0-rc5"

# Polkadot dependencies
polkadot-collator = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-service = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-parachain = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-primitives = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-validation = { git = "https://github.com/akru/polkadot", branch = "crates-io" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }

# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"
