[package]
name = "cumulus-consensus"
description = "Proxy Polkadot's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate deps
sc-client-api = { git = "https://github.com/akru/substrate" }
sp-consensus = { git = "https://github.com/akru/substrate" }
sp-core = { git = "https://github.com/akru/substrate" }
sp-inherents = { git = "https://github.com/akru/substrate" }
sp-runtime = { git = "https://github.com/akru/substrate" }
sp-block-builder = { git = "https://github.com/akru/substrate" }
sp-blockchain = { git = "https://github.com/akru/substrate" }
sp-api = { git = "https://github.com/akru/substrate" }
substrate-prometheus-endpoint = { git = "https://github.com/akru/substrate" }

# polkadot deps
polkadot-primitives = { git = "https://github.com/akru/polkadot" }
polkadot-runtime = { git = "https://github.com/akru/polkadot" }

# other deps
futures = { version = "0.3.1", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
log = "0.4"
