[package]
name = "cumulus-consensus"
description = "Proxy Polkadot's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate deps
sc-client-api = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-core = "2.0.0-rc5"
sp-inherents = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-block-builder = "2.0.0-rc5"
sp-blockchain = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
substrate-prometheus-endpoint = "0.8.0-rc5"

# polkadot deps
polkadot-primitives = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-runtime = { git = "https://github.com/akru/polkadot", branch = "crates-io" }

# other deps
futures = { version = "0.3.1", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
log = "0.4"
