[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# substrate deps
sp-blockchain = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-api = "2.0.0-rc5"
sp-core = "2.0.0-rc5"

# polkadot deps
polkadot-collator = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-primitives = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-statement-table = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-validation = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-network = { git = "https://github.com/akru/polkadot", branch = "crates-io" }

# cumulus deps
cumulus-primitives = { path = "../primitives" }

# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.10.2"

[dev-dependencies]
cumulus-test-runtime = { path = "../test/runtime" }

# substrate deps
sc-client-api = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-keyring = "2.0.0-rc5"

# polkadot deps
polkadot-test-runtime-client = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
