[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/akru/substrate" }
sc-consensus = { git = "https://github.com/akru/substrate" }
test-client = { package = "substrate-test-client", git = "https://github.com/akru/substrate" }
runtime = { package = "cumulus-test-runtime", path = "../runtime" }
sp-runtime = { git = "https://github.com/akru/substrate" }
sp-core = { git = "https://github.com/akru/substrate" }
sp-keyring = { git = "https://github.com/akru/substrate" }
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
sp-test-primitives = { git = "https://github.com/akru/substrate" }
