[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = "0.8.0-rc5"
sc-consensus = "0.8.0-rc5"
#test-client = { package = "substrate-test-client", git = "https://github.com/akru/substrate" }
runtime = { package = "cumulus-test-runtime", path = "../runtime" }
sp-runtime = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-keyring = "2.0.0-rc5"
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
#sp-test-primitives = "0.8.0-rc5"
