[package]
name = 'cumulus-test-parachain-collator'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
build = 'build.rs'
edition = '2018'

[[bin]]
name = 'cumulus-test-parachain-collator'
path = 'src/main.rs'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = { version = "0.3.1", features = ["compat"] }
log = '0.4.8'
parking_lot = '0.9.0'
trie-root = '0.15.2'
codec = { package = 'parity-scale-codec', version = '1.0.0' }
structopt = "0.3.3"
ansi_term = "0.12.1"
serde = { version = "1.0.101", features = ["derive"] }

# Parachain dependencies
parachain-runtime = { package = "cumulus-test-parachain-runtime", path = "runtime" }

# Substrate dependencies
sp-runtime = { version = "2.0.0-rc5", default-features = false }
sp-io = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-inherents = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sc-consensus = "0.8.0-rc5"
sc-cli = "0.8.0-rc5"
sc-executor = "0.8.0-rc5"
sc-service = "0.8.0-rc5"
sc-transaction-pool = "2.0.0-rc5"
sp-transaction-pool = "2.0.0-rc5"
sc-network = "0.8.0-rc5"
sc-basic-authorship = "0.8.0-rc.5"
sp-timestamp = "2.0.0-rc5"
sc-finality-grandpa = "0.8.0-rc5"
sc-informant = "0.8.0-rc5"

# Cumulus dependencies
cumulus-consensus = { path = "../../consensus" }
cumulus-collator = { path = "../../collator" }
cumulus-network = { path = "../../network" }
cumulus-primitives = { path = "../../primitives" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-parachain = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-collator = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-service = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-cli = { git = "https://github.com/akru/polkadot", branch = "crates-io" }

[build-dependencies]
substrate-build-script-utils = "2.0.0-rc5"

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tokio = { version = "0.2.13", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/akru/polkadot", branch = "crates-io" }
polkadot-runtime = { git = "https://github.com/akru/polkadot", branch = "crates-io" }

# Substrate dependencies
#substrate-test-runtime-client = "2.0.0-rc5"
frame-system = "2.0.0-rc5"
pallet-grandpa = "2.0.0-rc5"
pallet-transaction-payment = "2.0.0-rc5"
sp-arithmetic = "2.0.0-rc5"
sp-version = "2.0.0-rc5"
pallet-sudo = "2.0.0-rc5"
