[package]
name = 'cumulus-test-parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/akru/substrate", default-features = false }
sp-api = { git = "https://github.com/akru/substrate", default-features = false }
sp-io = { git = "https://github.com/akru/substrate", default-features = false }
sp-version = { git = "https://github.com/akru/substrate", default-features = false }
sp-runtime = { git = "https://github.com/akru/substrate", default-features = false }
sp-core = { git = "https://github.com/akru/substrate", default-features = false }
sp-session = { git = "https://github.com/akru/substrate", default-features = false }
sp-offchain = { git = "https://github.com/akru/substrate", default-features = false }
sp-block-builder = { git = "https://github.com/akru/substrate", default-features = false }
sp-transaction-pool = { git = "https://github.com/akru/substrate", default-features = false }
sp-inherents = { git = "https://github.com/akru/substrate", default-features = false }

frame-support = { git = "https://github.com/akru/substrate", default-features = false }
frame-executive = { git = "https://github.com/akru/substrate", default-features = false }
frame-system = { git = "https://github.com/akru/substrate", default-features = false }
pallet-balances = { git = "https://github.com/akru/substrate", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/akru/substrate", default-features = false }
pallet-timestamp = { git = "https://github.com/akru/substrate", default-features = false }
pallet-sudo = { git = "https://github.com/akru/substrate", default-features = false }
pallet-transaction-payment = { git = "https://github.com/akru/substrate", default-features = false }

# Cumulus dependencies
cumulus-runtime = { path = "../../../runtime", default-features = false }
cumulus-parachain-upgrade = { path = "../../../parachain-upgrade", default-features = false }
cumulus-message-broker = { path = "../../../message-broker", default-features = false }
cumulus-upward-message = { path = "../../../upward-message", default-features = false }
cumulus-primitives = { path = "../../../primitives", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/akru/polkadot", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	"cumulus-upward-message/std",
	"cumulus-primitives/std",
	"polkadot-parachain/std",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]
